# WinCapCPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CaptureGUI.hpp  ExampleCapture.hpp  Logger.hpp  Timer.hpp  Tools.hpp  WindowCapture.hpp  WindowCapture_DXGI.hpp  WindowCapture_GDI.hpp  WindowCapture_WGC.hpp  WindowInfo.hpp  main.cpp
visualstudio/: CaptureOpenCV.sln  CaptureOpenCV.vcxproj  CaptureOpenCV.vcxproj.filters
